# LibrePad

./: CMakeLists.txt  README.md  librepad.cpp  librepad.h  librepad.pro  librepad.qrc  librepad.ui  main.cpp  texteditor.cpp  texteditor.h
